Fix the fonts add the import

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Background music -->
         <audio id="backgroundMusic" loop>
-            <source src="./audio/Route 34 but it's lofi [KGHcEviaWck].mp3" type="audio/mpeg">
+            <source src="/audio/Route 34 but it's lofi [KGHcEviaWck].mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
 
