--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
 
     </head>
     <body>
-        <div class="question-container" id="questionContainer">Question?</div>
+        <video id="backgroundVideo" autoplay loop muted style="display: none;">
+            <source src="audio/Route 34 but it's lofi.mp4" type="video/mp4">
+        </video>
+        
+        <button id="startButton" class="btn btn-primary">Happy Heart's Day!!!</button>
 
-        <div class="gif">
+        <div class="question-container" id="questionContainer" style="display: none;">Question?</div>
+
+        <div class="gif" style="display: none;">
             <img src="images/cute-squirtle.gif" alt="Animated GIF">
         </div>
     
-        <div class="button-container">
+        <div class="button-container" style="display: none;">
             <button type="button" class="btn btn-success" id="yesButton">Yes</button>
             <button id="randomButton" class="btn btn-danger">No</button>
         </div>
@@ -40,7 +46,7 @@
 
         <!-- Background music -->
         <audio id="backgroundMusic" loop>
-            <source src="/audio/Route 34 but it's lofi [KGHcEviaWck].mp3" type="audio/mpeg">
+            <source src="audio/Route 34 but it's lofi [KGHcEviaWck].mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
 
