add more bible verse, and more thanks message

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     </head>
     <body>   
         <button id="startButton" class="btn btn-primary" class="button" style="background-color: rgb(224, 191, 196); color: #1b5374; ">
-            <h2> <b>Happy Heart's Day!!! </b></h2>
-            ✔️Check your volume<br>
-            ✔️There's a counter<br>
-            ✔️Read 'No' Messages
+            <div style="text-align: center;">
+                <h2><strong>Happy Heart’s Day!</strong></h2>
+                <div style="display: inline-block; text-align: left;">
+                    🔊 Make sure your volume is on<br>
+                    📩 Read all "No" messages<br>
+                    ⏳ There’s a "No" counter<br>
+                    📸 Screenshot this and send it back<br>
+                    ❓ Expect unique answers
+                </div>
+            </div>
         </button>
         
         <div id="topText" style="display: none; color: rgb(100, 45, 53);">
@@ -56,7 +62,7 @@
         </div>
 
         <!--Questions -->
-        <div class="question-container" id="questionContainer" style="display: none;">Let's spend Hearts day together?</div>
+        <div class="question-container" id="questionContainer" style="display: none;"></div>
         
         <!--Buttons-->
         <div class="button-container" style="display: none;">
@@ -67,8 +73,8 @@
         <!-- Simple Bible verse (Hidden by default) -->
         <div id="bibleVerse" style="display: none;" class="bible-verse">
             <p>
-                "We love because He first loved us."<br>
-                <strong>1 John 4:19 (NIV)</strong><br>
+                "<span id="verseText">We love because He first loved us.</span>"<br>
+                <strong><span id="verseRef">1 John 4:19</span> (NIV)</strong><br>
                 <em>God bless!!!<br> Have a great Day!</em>
             </p>
         </div>
