better responsiveness on large screen

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                     🔊 Make sure your volume is on<br>
                     📩 Read all "No" messages<br>
                     ⏳ There’s a "No" counter<br>
-                    📸 Screenshot this and send it back<br>
-                    ❓ Expect unique answers
+                    📸 Capture a screenshot and share it with the sender!<br>
+                    ❓ Expect unique answers <br>
+                    👆 Click me!
                 </div>
             </div>
         </button>
