better texts, and responsivness on larger screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     🔊 Make sure your volume is on<br>
                     📩 Read all "No" messages<br>
                     ⏳ There’s a "No" counter<br>
-                    📸 Capture a screenshot and share it with the sender!<br>
+                    📸 screenshot and share it with the sender!<br>
                     ❓ Expect unique answers <br>
                     👆 Click me!
                 </div>
@@ -76,7 +76,7 @@
             <p>
                 "<span id="verseText">We love because He first loved us.</span>"<br>
                 <strong><span id="verseRef">1 John 4:19</span> (NIV)</strong><br>
-                <em>God bless!!!<br> Have a great Day!</em>
+                <em>God bless!!!<br> Have a great Day!<br> Send it back now!</em>
             </p>
         </div>
 
