fix the big yes video to smaller one

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>
                 "<span id="verseText">We love because He first loved us.</span>"<br>
                 <strong><span id="verseRef">1 John 4:19</span> (NIV)</strong><br>
-                <em>God bless!!!<br> Have a great Day!<br> Send it back now!</em>
+                <em>God bless!!!<br> Have a great Day!<br> Send it back!</em>
             </p>
         </div>
 
