Fixed the inconsitency of tect in stratbutton

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     🔊 Make sure your volume is on<br>
                     📩 Read all "No" messages<br>
                     ⏳ There’s a "No" counter<br>
-                    📸 screenshot and share it with the sender!<br>
+                    📸 Screenshot and share it with the sender!<br>
                     ❓ Expect unique answers <br>
                     👆 Click me!
                 </div>
@@ -38,12 +38,12 @@
 
         <!--Video and gif display-->
         <div class="gif" style="display: none;">
-            <img src="images/cute-squirtle.gif" alt="Animated GIF">
+            <img src="./images/cute-squirtle.gif" alt="Animated GIF">
         </div>
 
         <div class="video-container" style="display: none;">
             <video id="noVideo" width="560" height="315" controls>
-                <source src="videos/NeverGive.mp4" type="video/mp4">
+                <source src="./videos/NeverGive.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -51,7 +51,7 @@
         <div class="yes-response" style="display: none;">
             <p id="yesText"></p>
             <video id="yesVideo" width="560" height="315" controls loop>
-                <source src="videos/Epic Sax Squirtle EDIT.mp4" type="video/mp4">
+                <source src="./videos/Epic Sax Squirtle EDIT.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -91,7 +91,7 @@
 
         <!-- Background music -->
         <audio id="backgroundMusic" loop>
-            <source src="audio/Route 34 but it's lofi [KGHcEviaWck].mp3" type="audio/mpeg">
+            <source src="./audio/Route 34 but it's lofi [KGHcEviaWck].mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
 
